k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: java-app-service
spec:
  type: LoadBalancer
  selector:
    app: java-app
  ports:
  - port: 80
    targetPort: 8080
